tests/invalid/multiply_star.err_exp
multiply_star.m:031: In clause for predicate `p'/2:
multiply_star.m:031:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`*'/2.[39;49m
multiply_star.m:031:   [38;5;226m(Did you mean `<', `=' or `>'?)[39;49m
